# plotgram

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  convert_entities.py  fix_points.py  smart_fix.py
crates/drawify-cli/: Cargo.toml
crates/drawify-cli/src/: main.rs
crates/drawify-core/: Cargo.toml
crates/drawify-core/src/: ast.rs  error.rs  lib.rs
crates/drawify-core/src/diff2/: README.md  diff.rs  format.rs  mod.rs  patch.rs  tests.rs  types.rs
crates/drawify-core/src/dsl/: lexer.rs  mod.rs
crates/drawify-core/src/dsl/parser/: expr.rs  mod.rs  recovery.rs  stmt.rs
crates/drawify-core/src/graphic_style/: README.md  blueprint.rs  common.rs  excalidraw.rs  mod.rs  neon_glow.rs  spatial_clarity.rs  standard.rs  stipple.rs  tests.rs
crates/drawify-core/src/icons/: README.md  catalog.rs  layout.rs  mod.rs  registry.rs  render.rs  resolve.rs  semantic_resolve.rs  validate.rs
crates/drawify-core/src/interchange/: mod.rs
crates/drawify-core/src/interchange/mindmap/: diagram.rs  mod.rs  tree.rs
crates/drawify-core/src/kinds/: mod.rs  registry.rs  standard.rs  traits.rs
crates/drawify-core/src/kinds/architecture/: mod.rs  validate.rs
crates/drawify-core/src/kinds/er/: mod.rs  semantics.rs  validate.rs
crates/drawify-core/src/kinds/flowchart/: mod.rs  validate.rs
crates/drawify-core/src/kinds/mindmap/: mod.rs  validate.rs
crates/drawify-core/src/kinds/sequence/: mod.rs  validate.rs
crates/drawify-core/src/kinds/state/: mod.rs  validate.rs
crates/drawify-core/src/layout/: algorithm_config.rs  catalog.rs  constants.rs  edge_postprocess.rs  geometry.rs  grid_snap.rs  mod.rs  perf.rs  pipeline.rs  plan.rs  postprocess.rs  readme.md  registry.rs  route_feedback.rs
crates/drawify-core/src/layout/edge/: edge_routing.rs  edge_routing_bezier.rs  edge_routing_circular.rs  edge_routing_organic.rs  edge_routing_spline.rs  mod.rs  visibility.rs
crates/drawify-core/src/layout/friendliness/: adjuster.rs  congestion.rs  crossing_predict.rs  group_gap.rs  long_edge.rs  mod.rs  port_conflict.rs
crates/drawify-core/src/layout/group/: border_shell.rs  config.rs  constants.rs  context.rs  corridor.rs  mod.rs  post_route.rs  rect.rs
crates/drawify-core/src/layout/group_frame/: group_frame_tests.rs  mod.rs  pass.rs  realign.rs
crates/drawify-core/src/layout/intent/: geometric.rs  mod.rs  topology.rs
crates/drawify-core/src/layout/lint/: config.rs  geometry.rs  mod.rs  violation.rs
crates/drawify-core/src/layout/node/: force_directed.rs  (+3 more)
crates/drawify-core/src/pipeline/: mod.rs  prepare.rs  render.rs
crates/drawify-core/src/prepare/: bridge.rs  mod.rs  profile.rs  style_resolve.rs  styles.rs  tests.rs
crates/drawify-core/src/profile/: mod.rs  standard_attrs.rs
crates/drawify-core/src/render/: mod.rs  output.rs  request.rs  scene.rs  visual.rs
crates/drawify-core/src/theme/: builtin.rs  compile.rs  context.rs  context_palette.rs  loader.rs  materialize.rs  merge.rs  mod.rs  schema.rs  select.rs
crates/drawify-core/src/types/: attr_constants.rs  attr_schema.rs  diagram_type.rs  graphic_style_id.rs  mod.rs  style_attr_keys.rs  style_attrs.rs
crates/drawify-core/src/validation/: attrs.rs  common.rs  mod.rs
crates/drawify-core/tests/: drawio_export.rs  outline_export.rs  outline_import.rs  outline_roundtrip.rs  showcase_smoke.rs
crates/drawify-eval/: Cargo.toml  readme.md
crates/drawify-eval/src/: engine.rs  history.rs  lib.rs  metrics.rs  profile.rs  report.rs
crates/drawify-server/: Cargo.toml  README.md
crates/drawify-server/src/: api.rs  main.rs
crates/drawify-wasm/: Cargo.toml
crates/drawify-wasm/src/: lib.rs
(+495 files in other folders)
