[workspace]
resolver = "2"
members = [
    "crates/drawify-core",
    "crates/drawify-cli",
    "crates/drawify-server",
    "crates/drawify-wasm",
    "crates/drawify-eval",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/your-org/drawify"
description = "A chart description language and rendering engine designed for AI Agents — Turn anything into a diagram"

[workspace.dependencies]
drawify-core = { path = "crates/drawify-core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0

[profile.release.package.drawify-wasm]
opt-level = "z"
