[package]
name = "drawify-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Layout and edge-routing quality evaluator for Drawify"

[dependencies]
drawify-core = { workspace = true, features = ["raster", "svg-debug"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
