[package]
name = "drawify-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WASM bindings for Drawify"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
drawify-core = { workspace = true, default-features = false, features = ["svg-debug"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
